HttpUnit release notes

Known problems:
    1. The "_parent" and "_empty" frame targets are not handled correctly
    2. The "_self" target only works for links, not forms

Limitations: HttpUnit does not support JavaScript


Revision History:
25-Oct-00
Additions:
    1. Forms with multiple buttons are now supported, using the SubmitButton class.
    2. WebResponse now supports finding a table via its summary text, using getTableWithSummary()
        
Problems corrected:
    1. Unnamed parameters are no longer submitted as part of a form request
    2. Searching for tables beginning with a string no longer aborts with NullPointerException if the table is missing cells
    3. A problem which caused WebResponse.java to fail compilation under JDK 1.1 has been corrected

17-Oct-00 1.1
Acknowledgements:
    Thanks to Seth Ladd for specific exceptions from WebConversation.getResponse
    Thanks to Dave Glowacki for suggestions on convenience methods in WebResponse and WebLink,
                            and for correcting the set up of the https protocol handling.
    Thanks to Perry Doell for the methods to examine cookies on WebConversation
    Thanks to Ken Hygh for the proper handling of parameters with no specified type
    Thanks to Gabriel Hauser for finding a bug in the handling of parameter defaults
     
Problems corrected:
    1. The value parameter for checkboxes is no longer ignored
    2. Previously, getTableStartingWith[Prefix] only checked the nested tables in cell (0,0) of each outer table
    3. Parameters with no type specified are now properly handled as text
    4. Base tag is now handled to override defaults for page URL and target
    5. Empty parameter values are now handled

Additions:
    1. The license agreement is now available from the home page and javadoc
    2. Https support is now built in; however, it depends on the JSSE extension (not included). 
       See http://java.sun.com/products/jsse.