@@ -116,6 +116,18 @@ public class FormSubmitTest extends HttpUnitTest {
     }
 
                               
+    public void testUnnamedImageButtonDefaultSubmit() throws Exception {
+        defineWebPage( "Default", "<form method=GET action = \"/ask\">" +
+                                  "<Input type=text name=age value=12>" +
+                                  "<Input type=image value=name src=\"\">" +
+                                  "</form>" );
+        WebResponse page = _wc.getResponse( getHostPath() + "/Default.html" );
+        WebForm form = page.getForms()[0];
+        WebRequest request = form.getRequest();
+        assertEquals( getHostPath() + "/ask?age=12", request.getURL().toExternalForm() );
+    }
+
+                              
     public void testImageButtonPositionalSubmit() throws Exception {
         defineWebPage( "Default", "<form method=GET action = \"/ask\">" +
                                   "<Input type=text name=age value=12>" +
@@ -188,6 +200,12 @@ public class FormSubmitTest extends HttpUnitTest {
         WebForm form = page.getForms()[0];
         WebRequest request = form.getRequest( form.getSubmitButton( "update", "name" ) );
         assertEquals( getHostPath() + "/ask?update=name&age=12", request.getURL().toExternalForm() );
+
+        request = form.getRequest( "update", "name" );
+        assertEquals( getHostPath() + "/ask?update=name&age=12", request.getURL().toExternalForm() );
+
+        request = form.getRequest( "update" );
+        assertEquals( getHostPath() + "/ask?update=age&age=12", request.getURL().toExternalForm() );
     }
 
                               
